# esp32c3_EPD

./: CMakeLists.txt  README.md  hello_world_main copy.txt  hello_world_main.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/Adafruit_MPU6050/: CMakeLists.txt
components/EPD_mqtt_xxx/: CMakeLists.txt  EPD_mqtt.c  EPD_mqtt.h
components/EPD_web/: CMakeLists.txt  web_serve.c
components/EPD_web/include/: web_serve.h
components/EPD_wifi_connection/: CMakeLists.txt  wifi_comm.c
components/console_xxx/: CMakeLists.txt  EPD_console.c
components/display/: CMakeLists.txt  EPD.c  EPD.h
components/display/include/: EPD.h  fsdf.h  img_EPD.h
components/store/: CMakeLists.txt  FATFS_sd.c  FATFS_sd.h  SPIFFS_flash.c  SPIFFS_flash.h
components/store/include/: SPIFFS_flash.h
html/: index.html
html/css/: styles.css
html/js/: xxx.js
main/: CMakeLists.txt  EPD.c  EPD.h  EPD_console.c  EPD_console.h  FATFS_sd.c  SPIFFS_flash.c  SPIFFS_flash.h  fsdf.h  hello_world_main.c  i2s_wav.h.txt  i2s_wav.txt  main.h  mqtt.c  mqtt.h  web_serve.c  web_serve.h  wifi_comm.c
main/include/: main.h
